# CodeLens

./: .gitignore  pyproject.toml
src/codelens/: main.py  scanner.py
src/codelens/core/: ai_handler.py  memory_manager.py  parser.py  scanner.py  vector_store.py
src/codelens/ui/: formatter.py
tests/: test_ai_handler.py  test_cli.py  test_memory.py  test_parser.py  test_scanner.py  test_vector_store.py
